--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "coffee-script": "^1.9.3",
     "lodash": "^3.10.0",
-    "qs": "^5.2.0"
+    "qs": "^5.2.0",
+    "rxjs": "^5.4.3"
   },
   "devDependencies": {
     "b-assert": "^0.1.2",
