--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "coffee",
     "coffeescript"
   ],
-  "main": "src/index.coffee",
+  "main": "src/index.js",
   "license": "MIT",
   "author": "Zolmeister (https://zolmeister.com/)",
   "dependencies": {
